# MacBird

./: .gitignore  CMakeLists.txt  README.md  README2.md
Source/: main.cpp  main.mm
Source/Core/Browser/: BrowserInfo.h  BrowserInfo.mm
Source/Core/CSS/: CSSParser.h  CSSParser.mm
Source/Core/HTML/: HTMLParser.h  HTMLParser.mm
Source/Core/Network/: HTTPClient.h  HTTPClient.mm
Source/DevTools/: DevToolsManager.h  DevToolsManager.mm
Source/DevTools/Common/: DevToolsStyles.h  DevToolsStyles.mm
Source/DevTools/Console/: ConsoleTab.h  ConsoleTab.mm
Source/DevTools/Elements/: ElementsTab.h  ElementsTab.mm
Source/DevTools/Network/: NetworkTab.h  NetworkTab.mm
Source/Platform/macOS/: AppDelegate.h  AppDelegate.mm  BrowserWindow.h  BrowserWindow.mm  DevToolsManager.h  DevToolsManager.mm  MenuManager.h  MenuManager.mm  TabManager.h  TabManager.mm
Source/UI/TabSystem/: Tab.h  Tab.mm  TabManager.h  TabManager.mm
